--- a/snapshot/package.json
+++ b/snapshot/package.json
@@ -1,6 +1,10 @@
 {
+  "scripts": {
+    "test": "jest"
+  },
   "dependencies": {
-    "react": "^15.4.0"
+    "react": "^15.3.1",
+    "react-dom": "^15.3.1"
   },
   "devDependencies": {
     "babel-jest": "*",
@@ -8,12 +12,11 @@
     "babel-preset-es2015": "*",
     "babel-preset-react": "*",
     "jest": "*",
-    "react-test-renderer": "*"
-  },
-  "scripts": {
-    "test": "jest"
+    "react-addons-test-utils": "15.3.2",
+    "react-test-renderer": "^15.4.2"
   },
   "jest": {
-    "testEnvironment": "node"
+    "verbose": false,
+    "bail": true
   }
 }
