--- a/typescript/package.json
+++ b/typescript/package.json
@@ -21,6 +21,6 @@
     "transform": {
       "^.+\\.(ts|tsx)$": "<rootDir>/preprocessor.js"
     },
-    "testRegex": "/__tests__/.*\\.(ts|tsx|js)|\\.(test|spec)\\.(js|jsx|ts|tsx)$"
+   "testRegex": "(/__tests__/.*\\.(ts|tsx|js))|(\\.(test|spec)\\.(ts|tsx|js)*)$"
   }
 }
