--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "jest": "^20.0.4",
     "less": "^2.7.2",
     "less-loader": "^4.0.5",
+    "moment": "^2.18.1",
     "postcss-loader": "^2.0.6",
     "rimraf": "^2.6.1",
     "style-loader": "^0.19.0",
