--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,9 +7,8 @@
         {
             "type": "node",
             "request": "attach",
-            "name": "Attch",
-            "protocol": "inspector",
-            "port": 9229
+            "name": "Attach to process--5858",
+            "port": 5858
         }
     ]
 }
