--- a/.babelrc
+++ b/.babelrc
@@ -3,5 +3,5 @@
         "es2015",
         "react"
     ],
-    "plugins": ["transform-object-rest-spread","transform-class-properties"]
+    "plugins": ["transform-object-rest-spread","transform-class-properties","transform-async-to-generator"]
 }
