--- a/enzyme/.babelrc
+++ b/enzyme/.babelrc
@@ -1,4 +1,4 @@
 {
   "presets": ["es2015", "react"],
-  "plugins": ["transform-async-to-generator"]
+  "plugins": ["transform-object-rest-spread","transform-class-properties","transform-async-to-generator"]
 }
