--- a/timer/package.json
+++ b/timer/package.json
@@ -1,6 +1,13 @@
 {
   "devDependencies": {
-    "jest": "*"
+    "babel-plugin-transform-async-to-generator": "^6.24.1",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-es2015": "*",
+    "babel-preset-react": "*",
+    "jest": "^22.0.6",
+    "lodash": "^4.17.4"
   },
   "scripts": {
     "test": "jest"
