--- a/enzyme/package.json
+++ b/enzyme/package.json
@@ -4,8 +4,8 @@
     "debug-test": "node --debug-brk node_modules/jest/bin/jest.js  --no-cache --runInBand  "
   },
   "dependencies": {
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0"
+    "react": "^16.4.0",
+    "react-dom": "^16.4.0"
   },
   "devDependencies": {
     "babel-plugin-transform-async-to-generator": "^6.24.1",
@@ -14,11 +14,10 @@
     "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "*",
     "babel-preset-react": "*",
-    "enzyme": "^3.1.0",
+    "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.0.1",
-    "jest": "^22.0.3",
-    "react-addons-test-utils": "^15.3.2",
-    "react-test-renderer": "16.0.0-alpha.12",
-    "redux-form": "^6.4.3"
+    "jest": "^23.1.0",
+    "react-test-renderer": "^16.4.0",
+    "redux-form": "^7.3.0"
   }
 }
