--- a/enzyme/package.json
+++ b/enzyme/package.json
@@ -16,6 +16,7 @@
     "babel-preset-react": "*",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.0.1",
+    "enzyme-to-json": "^3.3.4",
     "jest": "^23.1.0",
     "react-test-renderer": "^16.4.0",
     "redux-form": "^7.3.0"
