--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,8 @@
         {
             "type": "node",
             "request": "attach",
-            "name": "attach"
+            "name": "attach",
+            "port": 9229
         }
     ]
 }
