--- a/enzyme/package.json
+++ b/enzyme/package.json
@@ -5,7 +5,8 @@
   },
   "dependencies": {
     "react": "^16.4.0",
-    "react-dom": "^16.4.0"
+    "react-dom": "^16.4.0",
+    "prop-types": "^15.6.2"
   },
   "devDependencies": {
     "babel-plugin-transform-async-to-generator": "^6.24.1",
