--- a/enzyme/package.json
+++ b/enzyme/package.json
@@ -19,6 +19,7 @@
     "enzyme-adapter-react-16": "^1.0.1",
     "enzyme-to-json": "^3.3.4",
     "jest": "^23.1.0",
+    "react-router-dom": "^4.3.1",
     "react-test-renderer": "^16.4.0",
     "redux-form": "^7.3.0"
   }
