--- a/enzyme/package.json
+++ b/enzyme/package.json
@@ -4,9 +4,9 @@
     "debug": "node --inspect-brk node_modules/.bin/jest  --runInBand  "
   },
   "dependencies": {
+    "prop-types": "^15.6.2",
     "react": "^16.4.0",
-    "react-dom": "^16.4.0",
-    "prop-types": "^15.6.2"
+    "react-dom": "^16.4.0"
   },
   "devDependencies": {
     "babel-plugin-transform-async-to-generator": "^6.24.1",
@@ -15,13 +15,14 @@
     "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "*",
     "babel-preset-react": "*",
+    "chalk": "^2.4.1",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.0.1",
     "enzyme-to-json": "^3.3.4",
     "jest": "^23.4.1",
+    "lerna-test-library": "^1.2.1",
     "react-router-dom": "^4.3.1",
     "react-test-renderer": "^16.4.0",
-    "redux-form": "^7.3.0",
-    "lerna-test-library": "^1.2.1"
+    "redux-form": "^7.3.0"
   }
 }
